# tropel-musical

./: .gitignore  LICENSE  README.md  README_es.md  pyproject.toml
src/model/: testing_pymunk.py  tropel_musical_model.py
src/view/gui/: tropel_musical_gui.py
