[project]
name = "tropel-musical"
version = "0.1.0"
description = ""
authors = [
    {name = "kevincifuentesdev",email = "kevins_cifuentes@soy.sena.edu.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymunk (>=6.11.1,<7.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
